--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^4.4.5",
     "@angular/platform-browser-dynamic": "^4.4.5",
     "@angular/router": "^4.4.5",
+    "@swimlane/ngx-charts": "^6.1.0",
     "core-js": "^2.4.1",
+    "d3": "^4.11.0",
     "moment": "^2.19.1",
     "node-sass": "^4.5.3",
     "rxjs": "^5.4.2",
