--- a/API/HomeBookkeeping/appsettings.json
+++ b/API/HomeBookkeeping/appsettings.json
@@ -1,5 +1,12 @@
 ﻿{
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=homebookkeepingdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+
+  "AuthOptions": {
+    "ISSUER": "HomeBookkeeping",
+    "AUDIENCE": "localhost:4200",
+    "KEY": "mysupersecret_secretkey!123qwerty",
+    "LIFETIME": 3
   }
 }
